# vivavis_vision

./: .gitignore  CMakeLists.txt  package.xml  readme.md
docker_config/: Dockerfile  install_deps.sh
docker_config/shared/: setup_ws.sh
include/: rgb_d_combiner.h  visavis_vision.h  vivavis_vision.h
include/visavis_vision/: rgb_d_combiner.h  visavis_vision.h
launch/: visavis_combiner.launch  visavis_demo.launch  visavis_rgbd_vo.launch  visavis_sim.launch  visavis_sim_coppelia_auto.launch  visavis_sim_norviz.launch  visavis_stitch.launch  visavis_stitch_rgbd_vo.launch  visavis_vision.launch  vivavis_combiner.launch  vivavis_sim.launch  vivavis_stitch.launch  vivavis_vision.launch
msg/: CloudArray.msg  Ellipsoid.msg  EllipsoidArray.msg  ObstacleInfo.msg  ObstacleInfoArray.msg  PoseStampedArray.msg  WallInfo.msg  WallInfoArray.msg  wall_info.msg
rviz/: visavis_vision.rviz  vivavis_vision.rviz
script/: client_ROS.html  json_writer_node.py  object_detection_node.py  ros_to_json_data.py
sim_scenes/: real_complete_room.ttt  real_complete_two_room.ttt  real_simple_room.ttt  real_traj_room.ttt
src/: coppelia_combiner.cpp  pcloud_stitch.cc  rgb_d_combiner.cpp  visavis_vision.cpp  vivavis_vision.cpp
