<?xml version="1.0"?>
<package format="2">
  <name>vivavis_vision</name>
  <version>0.0.0</version>
  <description>The vivavis_vision package</description>

  <maintainer email="andrea.roberti@univr.it">andrea roberti</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>image_transport</build_depend>egein
  <build_depend>cv_bridge</build_depend>
  <build_depend>altair_msgs</build_depend>
    
  <exec_depend>altair_msgs</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
